fixed overlapping on content and footer

--- a/css/About.css
+++ b/css/About.css
@@ -30,7 +30,7 @@ html {
 
 body {
     display: grid;
-    grid-template-rows: 15% 25% 25% 25% 10%;
+    grid-template-rows: 15% auto auto auto auto 10%;
     grid-template-columns: 10% 15% 15% 10% 25% 15% 10%;
     row-gap: 1rem;
     background-color: #FDF5F1;
@@ -98,23 +98,26 @@ a.active {
 
                         /* ///// MAIN ///// */
 
+section {
+    margin: 0 auto;
+}
+
 #intro {
     grid-row-start: 2;
     grid-row-end: 3;
     grid-column-start: 3;
-    grid-column-end: 7;
+    grid-column-end: 6;
     width: 80%;
     max-width: 500px;
-    min-height: 100vh;
-    margin: 2em auto;
-    overflow: scroll;
+    /* min-height: 100vh; */
     
 }
 
 h2 {
     font-family: 'Akzidenz-GroteskNextReg', sans-serif;
     color: #364771;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
+    margin: 0.7em 0 0.7em 0;
 }
 
 
@@ -129,7 +132,7 @@ p {
 .subheading {
     font-family: 'Akzidenz-GroteskNextReg', sans-serif;
     font-size: 1.3rem;
-    margin-top: 0.7em;
+    margin-top: 0.7rem;
 }
 
 #interests {
@@ -138,16 +141,30 @@ p {
     grid-column-start: 2;
     grid-column-end: 6;
     width: 80%;
-    min-width: 0;
-    margin: 2em auto;
+}
+
+#toolset {
+    grid-row-start: 5;
+    grid-row-end: 6;
+    grid-column-start: 2;
+    grid-column-end: 6;
+    width: 80%;
+}
+
+li {
+    font-family: 'Akzidenz-GroteskNextLight', sans-serif;
+    color: #364771;
+    font-size: 1.2rem;
+    padding-bottom: 0.5rem;
+    list-style-type: none;
 }
 
 
                     /* ///// FOOTER ///// */
 footer {
     display: grid;
-    grid-row-start: 5;
-    grid-row-end: 6;
+    grid-row-start: 6;
+    grid-row-end: 7;
     grid-column-start: 1;
     grid-column-end: 8;
     background-color: #364771;
@@ -157,7 +174,7 @@ footer {
 .copyright {
     align-self: end;
     color: #FDF5F1;
-    text-align: right;
+    justify-self: right;
     padding: 0 1em 0.5em 0;
 }
 
